[package]
name = "forex-candlestick-cli"
version = "0.1.0"
edition = "2021"

[lib]
name = "forex_candlestick"
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cli-candlestick-chart = "0.4.1"
serde = { version = '1.0.117', features = [ 'derive' ] }
serde_json = '1.0.60'

futures = '0.3.8'
futures-util = '0.3.8'

tokio = { version = '0.3.5', features = [ 'rt', 'rt-multi-thread', 'time' ] }

tungstenite = "0.11.1"
tokio-tungstenite = { version = "0.12.0", features = [ "tls" ] }

rand = '0.7.3'

#[dev-dependencies]
regex = '1.4.2'

[[bin]]
name = "rust"
path = "main.rs"
